static files directory

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -178,21 +178,20 @@
   <div class="container hero">
     <div class="container">
       <div class="row">
-        <div class="col-md-4"><img class="img-fluid d-block" src="220px-Mycroft_Holmes.jpg"></div>
+        <div class="col-md-4"><img class="img-fluid d-block" src="/assets/mycroft.jpg"></div>
         <div class="col-md-8">
-          <h2>Mycroft can focus them all, and say offhand how each factor would affect the other. They began by using him as a short-cut, a convenience; now he has made himself an essential. In that great brain of his everything is pigeon-holed and can be handed out in an instant.</h2>
+          <h3>Mycroft can focus them all, and say offhand how each factor would affect the other. They began by using him as a short-cut, a convenience; now he has made himself an essential. In that great brain of his everything is pigeon-holed and can be handed out in an instant.</h3>
         </div>
       </div>
     </div>
-    <p>The code of this sample lives <a href="https://github.com/Scalingo/sample-erlang">on GitHub</a>. You can find <a href="https://samples.scalingo.com">more samples here</a>.</p>
-  </div>
+      </div>
   <footer>
     <div class="container">
       <p>
-        <span class="one-liner"><a href="https://scalingo.com">Scalingo</a> is the best Platform as a Service on the market:</span> no server to install, no dependencies to install, just push your code! </p>
+        <span class="one-liner">This incarnation is platformed by <a href="https://scalingo.com">Scalingo</a> quite simply the best Platform as a Service on the market:</span> no server to install, no dependencies to install, just add the secret sauce! </p>
       <div class="row">
         <div class="col-md-12">
-          <div class="love">
+          <div class="love h-50 w-100">
             <img class="scalingo-logo" alt="Scalingo" src="https://scalingo.com/logo-lightgrey.svg">
             <img class="heart-logo" alt="love" src="https://cdn.scalingo.com/documentation/heart.png">
             <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="243" height="213" viewBox="0 0 243 213" id="svg2" class="tech-logo">
