--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -2,11 +2,10 @@
 <html>
 
 <head>
-  <title>Greetings from a sample Erlang app!</title>
+  <title>Mycroft KB</title>
   <meta content="website" property="og:type">
   <meta content="https://cdn.scalingo.com/homepage/assets/fb-33a6a93ddbf90bfdae57407481aa05a4.png" property="og:image">
-  <meta content="Deploying your own Erlang app on Scalingo is as easy as pie: JUST CLICK THIS BUTTON! It will be up in less than 2 minutes!" property="og:description">
-  <meta charset="utf-8">
+   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="shortcut icon" href="https://scalingo.com/favicon.ico" type="image/vnd.microsoft.icon">
@@ -171,14 +170,14 @@
       }
     }
   </style>
-  <link rel="stylesheet" href="../../../../sherlock0/public/assets/css/now-ui-kit.css">
+  <link rel="stylesheet" href="/assets/css/now-ui-kit.css">
 </head>
 
 <body>
   <div class="container hero">
     <div class="container">
       <div class="row">
-        <div class="col-md-4"><img class="img-fluid d-block" src="/assets/mycroft.jpg"></div>
+        <div class="col-md-4"><img class="img-fluid d-block" src="/assets/img/mycroft.jpg"></div>
         <div class="col-md-8">
           <h3>Mycroft can focus them all, and say offhand how each factor would affect the other. They began by using him as a short-cut, a convenience; now he has made himself an essential. In that great brain of his everything is pigeon-holed and can be handed out in an instant.</h3>
         </div>
